@@ -1,8 +1,8 @@
 /************************************************************************************
  * include/nuttx/usb/usb.h
  *
- *   Copyright (C) 2008, 2009-2010 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2008, 2009-2010, 2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -274,7 +274,7 @@ struct usb_devdesc_s
   uint8_t len;               /* Descriptor length */
   uint8_t type;              /* Descriptor type */
   uint8_t usb[2];            /* USB version */
-  uint8_t class;             /* Device class */
+  uint8_t classid;           /* Device class */
   uint8_t subclass;          /* Device sub-class */
   uint8_t protocol;          /* Device protocol */
   uint8_t mxpacketsize;      /* Max packet size (ep0) */
@@ -334,7 +334,7 @@ struct usb_ifdesc_s
   uint8_t ifno;              /* Interface number */
   uint8_t alt;               /* Alternate setting */
   uint8_t neps;              /* Number of endpoints */
-  uint8_t class;             /* Interface class */
+  uint8_t classid;           /* Interface class */
   uint8_t subclass;          /* Interface sub-class */
   uint8_t protocol;          /* Interface protocol */
   uint8_t iif;               /* iInterface */
@@ -369,7 +369,7 @@ struct usb_qualdesc_s
   uint8_t  len;               /* Descriptor length */
   uint8_t  type;              /* Descriptor type */
   uint8_t  usb[2];            /* USB version */
-  uint8_t  class;             /* Qualifier class */
+  uint8_t  classid;           /* Qualifier class */
   uint8_t  subclass;          /* Qualifier sub-class */
   uint8_t  protocol;          /* Qualifier protocol */
   uint8_t  mxpacketsize;      /* Max packet size (ep0) */
@@ -394,7 +394,7 @@ struct usb_iaddesc_s
   uint8_t  type;              /* Descriptor type */
   uint8_t  firstif;           /* Number of first interface of the function */
   uint8_t  nifs;              /* Number of interfaces associated with the function */
-  uint8_t  class;             /* Class code*/
+  uint8_t  classid;           /* Class code */
   uint8_t  subclass;          /* Sub-class code */
   uint8_t  protocol;          /* Protocol code */
   uint8_t  ifunction;         /* Index to string identifying the function */
